--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -596,6 +596,10 @@ video {
           animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
+.list-disc {
+  list-style-type: disc;
+}
+
 .items-center {
   align-items: center;
 }
@@ -636,6 +640,31 @@ video {
 
 .italic {
   font-style: italic;
+}
+
+.text-sky-800 {
+  --tw-text-opacity: 1;
+  color: rgb(7 89 133 / var(--tw-text-opacity));
+}
+
+.text-sky-600 {
+  --tw-text-opacity: 1;
+  color: rgb(2 132 199 / var(--tw-text-opacity));
+}
+
+.decoration-violet-400 {
+  -webkit-text-decoration-color: #a78bfa;
+          text-decoration-color: #a78bfa;
+}
+
+.decoration-sky-800 {
+  -webkit-text-decoration-color: #075985;
+          text-decoration-color: #075985;
+}
+
+.decoration-sky-600 {
+  -webkit-text-decoration-color: #0284c7;
+          text-decoration-color: #0284c7;
 }
 
 .invert {
