--- a/styles/app.css
+++ b/styles/app.css
@@ -27,3 +27,15 @@
     height: 100%;
 }
 
+.radisson-color-list {
+    list-style: none;
+}
+
+.radisson-color-list li::before {
+    content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
+    color: #86bdd2; /* Change the color */
+    font-weight: bold; /* If you want it to be bold */
+    display: inline-block; /* Needed to add space between the bullet and the text */
+    width: 1em; /* Also needed for space (tweak if needed) */
+    margin-left: -1em; /* Also needed for space (tweak if needed) */
+}
