--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -647,14 +647,9 @@ video {
   color: rgb(7 89 133 / var(--tw-text-opacity));
 }
 
-.text-sky-600 {
+.text-sky-500 {
   --tw-text-opacity: 1;
-  color: rgb(2 132 199 / var(--tw-text-opacity));
-}
-
-.decoration-violet-400 {
-  -webkit-text-decoration-color: #a78bfa;
-          text-decoration-color: #a78bfa;
+  color: rgb(14 165 233 / var(--tw-text-opacity));
 }
 
 .decoration-sky-800 {
@@ -662,9 +657,9 @@ video {
           text-decoration-color: #075985;
 }
 
-.decoration-sky-600 {
-  -webkit-text-decoration-color: #0284c7;
-          text-decoration-color: #0284c7;
+.decoration-sky-500 {
+  -webkit-text-decoration-color: #0ea5e9;
+          text-decoration-color: #0ea5e9;
 }
 
 .invert {
@@ -701,6 +696,25 @@ video {
   height: 100%;
 }
 
+.radisson-color-list {
+  list-style: none;
+}
+
+.radisson-color-list li::before {
+  content: "\2022";
+  /* Add content: \2022 is the CSS Code/unicode for a bullet */
+  color: #86bdd2;
+  /* Change the color */
+  font-weight: bold;
+  /* If you want it to be bold */
+  display: inline-block;
+  /* Needed to add space between the bullet and the text */
+  width: 1em;
+  /* Also needed for space (tweak if needed) */
+  margin-left: -1em;
+  /* Also needed for space (tweak if needed) */
+}
+
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -723,4 +737,3 @@ video {
     color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 }
-
