--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -563,6 +563,10 @@ video {
   position: relative;
 }
 
+.block {
+  display: block;
+}
+
 .flex {
   display: flex;
 }
@@ -687,6 +691,10 @@ video {
 
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+body {
+  overflow: scroll;
 }
 
 .play-button {
