--- a/styles/app.css
+++ b/styles/app.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    overflow: scroll;
+}
+
 .play-button {
     box-sizing: border-box;
     height: 174px;
