--- a/functions/_assets/global-SXUMYMQH.css
+++ b/functions/_assets/global-SXUMYMQH.css
@@ -432,7 +432,7 @@ video {
   --tw-ring-inset:  ;
   --tw-ring-offset-width: 0px;
   --tw-ring-offset-color: #fff;
-  --tw-ring-color: rgb(147 197 253 / 0.5);
+  --tw-ring-color: rgb(59 130 246 / 0.5);
   --tw-ring-offset-shadow: 0 0 #0000;
   --tw-ring-shadow: 0 0 #0000;
   --tw-shadow: 0 0 #0000;
@@ -479,7 +479,7 @@ video {
   --tw-ring-inset:  ;
   --tw-ring-offset-width: 0px;
   --tw-ring-offset-color: #fff;
-  --tw-ring-color: rgb(147 197 253 / 0.5);
+  --tw-ring-color: rgb(59 130 246 / 0.5);
   --tw-ring-offset-shadow: 0 0 #0000;
   --tw-ring-shadow: 0 0 #0000;
   --tw-shadow: 0 0 #0000;
@@ -526,7 +526,7 @@ video {
   --tw-ring-inset:  ;
   --tw-ring-offset-width: 0px;
   --tw-ring-offset-color: #fff;
-  --tw-ring-color: rgb(147 197 253 / 0.5);
+  --tw-ring-color: rgb(59 130 246 / 0.5);
   --tw-ring-offset-shadow: 0 0 #0000;
   --tw-ring-shadow: 0 0 #0000;
   --tw-shadow: 0 0 #0000;
@@ -549,10 +549,6 @@ video {
   --tw-backdrop-opacity:  ;
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
-}
-
-body {
-  overflow: scroll;
 }
 
 .fixed {
@@ -622,9 +618,14 @@ body {
   border-radius: 9999px;
 }
 
-.bg-blu1 {
+.bg-radisson1 {
   --tw-bg-opacity: 1;
-  background-color: rgb(2 78 164 / var(--tw-bg-opacity));
+  background-color: rgb(85 156 171 / var(--tw-bg-opacity));
+}
+
+.bg-radisson2 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(80 148 162 / var(--tw-bg-opacity));
 }
 
 .bg-parkinn1 {
@@ -632,9 +633,9 @@ body {
   background-color: rgb(0 48 104 / var(--tw-bg-opacity));
 }
 
-.bg-radisson1 {
+.bg-parkinn2 {
   --tw-bg-opacity: 1;
-  background-color: rgb(85 156 171 / var(--tw-bg-opacity));
+  background-color: rgb(1 59 127 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50 {
@@ -697,6 +698,10 @@ body {
 
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+body {
+  overflow: scroll;
 }
 
 .play-button {
@@ -791,21 +796,6 @@ body {
   --tw-scale-x: 1;
   --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:bg-blu2:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(1 72 151 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-parkinn2:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(1 54 116 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-radisson2:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(82 150 165 / var(--tw-bg-opacity));
 }
 
 .focus\:outline-none:focus {
