--- a/functions/_assets/global-YSRNWGS2.css
+++ b/functions/_assets/global-YSRNWGS2.css
@@ -622,9 +622,14 @@ body {
   border-radius: 9999px;
 }
 
-.bg-blu1 {
+.bg-radisson1 {
   --tw-bg-opacity: 1;
-  background-color: rgb(2 78 164 / var(--tw-bg-opacity));
+  background-color: rgb(85 156 171 / var(--tw-bg-opacity));
+}
+
+.bg-radisson2 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(80 148 162 / var(--tw-bg-opacity));
 }
 
 .bg-parkinn1 {
@@ -632,9 +637,19 @@ body {
   background-color: rgb(0 48 104 / var(--tw-bg-opacity));
 }
 
-.bg-radisson1 {
+.bg-parkinn2 {
   --tw-bg-opacity: 1;
-  background-color: rgb(85 156 171 / var(--tw-bg-opacity));
+  background-color: rgb(1 70 149 / var(--tw-bg-opacity));
+}
+
+.bg-blu1 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 78 164 / var(--tw-bg-opacity));
+}
+
+.bg-blu2 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(4 56 114 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50 {
@@ -793,19 +808,19 @@ body {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:bg-radisson2:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(80 148 162 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-blu2:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(1 72 151 / var(--tw-bg-opacity));
+  background-color: rgb(4 56 114 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-parkinn2:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(1 54 116 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-radisson2:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(82 150 165 / var(--tw-bg-opacity));
+  background-color: rgb(1 70 149 / var(--tw-bg-opacity));
 }
 
 .focus\:outline-none:focus {
