--- a/styles/app.css
+++ b/styles/app.css
@@ -42,6 +42,12 @@ body {
 }
 
 @font-face {
+    font-family: "Sofia Pro";
+    font-weight: 400;
+    src: url("https://qrunch-fonts.s3.eu-central-1.amazonaws.com/SofiaPro-Medium.ttf") format("truetype");
+}
+
+@font-face {
     font-family: "EB Garamond";
     font-weight: 300;
     src: url("https://qrunch-fonts.s3.eu-central-1.amazonaws.com/EBGaramond-Regular.ttf") format("truetype");
